--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,7 @@ sudo: required
 notifications:
   email:
     recipients:
-<<<<<<< HEAD
       - mark.lee@ncs.com.sg
-=======
-      - bunnyppl@gmail.com
->>>>>>> 9e3f9758fae5984c684725b5ab2d5633da37e52e
     on_success: always
     on_failure: always
 branches:
@@ -22,21 +18,13 @@ before_script:
   - npm install -g @angular/cli
   - npm install -g now
 script:
-<<<<<<< HEAD
-  - ng build --prod --base-href https://github.com/markleencs/bitcoin-order-app
-=======
-  - ng build --prod --base-href https://kenken64.github.io/bitcoin-order-app/
-
->>>>>>> 9e3f9758fae5984c684725b5ab2d5633da37e52e
+  - ng build --prod --base-href https://markleencs.github.io/bitcoin-order-app/
   
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: dist/bitcoin
-<<<<<<< HEAD
   edge: true
-=======
->>>>>>> 9e3f9758fae5984c684725b5ab2d5633da37e52e
   on:
     branch: development
